intentando variable de entorno

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
             </footer>
         </div>
     </main>
+    <script>
+        window.apiKey = "${process.env.apiKey}"
+    </script>
     <script src="key.js"></script>
     <script src="app.js" type="module"></script>
 </body>
